--- a/app/src/main/res/layout/layout_signup.xml
+++ b/app/src/main/res/layout/layout_signup.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/background"
+    android:background="@drawable/bg"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:layout_above="@id/alreadyMemberlbl"
-        android:textSize="16dp"
+        android:textSize="18dp"
         android:id="@+id/signUp"
         android:text="@string/signup"
         android:background="@drawable/loginbutton"
@@ -38,8 +38,8 @@
         android:id="@+id/toplogo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="@drawable/logo"
-        />
+        android:scaleType="fitXY"
+        android:src="@drawable/logo_1" />
 
     <com.qriyo.android.customview.MyTextView
         android:layout_width="wrap_content"
@@ -49,7 +49,6 @@
         android:layout_marginTop="5dp"
         android:id="@+id/qriyolbl"
         android:textColor="@android:color/white"
-        android:text="@string/qriyo"
         android:textSize="22dp"
         />
 
@@ -76,10 +75,12 @@
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:backgroundTint="@android:color/white"
+            android:drawablePadding="15dp"
             android:hint="@string/name"
             android:id="@+id/editName" />
 
         <com.qriyo.android.customview.MyEditText
+            android:drawablePadding="15dp"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -92,6 +93,7 @@
 
 
         <com.qriyo.android.customview.MyEditText
+            android:drawablePadding="15dp"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -104,6 +106,7 @@
 
 
         <com.qriyo.android.customview.MyEditText
+            android:drawablePadding="15dp"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -116,6 +119,7 @@
 
 
         <com.qriyo.android.customview.MyEditText
+            android:drawablePadding="15dp"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
