--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ColorPrimary">#FF5722</color>
-    <color name="ColorPrimaryDark">#E64A19</color>
+    <color name="ColorPrimary">#0D1F35</color>
+    <color name="ColorPrimaryDark">#0D1F35</color>
     <color name="ColorLoginButton">#FB657B</color>
     <color name="ColorFBLoginButton">#3B5998</color>
+    <color name="BGColor">#F2F2F2</color>
+
 </resources>
